@@ -151,6 +151,10 @@ Release date: TBA
 
   Closes #5208
 
+* ``missing-raises-doc`` will now check the class hierarchy of the raised exceptions
+
+  Closes #4955
+
 
 What's New in Pylint 2.11.2?
 ============================
